# rapid-utils

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: deploy.yml  test.yml
src/: err.rs  http_utils.rs  hypi_rapid_plugin.rs  lib.rs  plugin.rs  wellknown.rs
tests/: basics.rs
