[package]
name = "rapid-utils"
version = "0.1.6"
edition = "2021"
license-file = "LICENSE.md"
description = "A bunch of utils and constants used across various Hypi RAPID server packages"
homepage = "https://github.com/hypi-universe/rapid-utils"
repository = "https://github.com/hypi-universe/rapid-utils"
authors = [
    "zcourts"
]
readme = "README.md"
categories = ["web-programming"]

[dependencies]
rapid-fs = "0.1.0"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.60"
lazy_static = "1.4.0"
log = "0.4.21"
http = "1.1.0"
bytes = "1.6.0"
bollard = "0.16.1"
tonic = {version = "0.11.0", features = ["prost"] }
prost = "0.12.4"
tokio = "1.37.0"
tokio-stream = "0.1.15"
tokio-util = "0.7.11"
futures-util = "0.3.30"

[build-dependencies]
reqwest = {version = "0.12.4", features = ["blocking"]}
tonic-build = { version = "0.11.0", features = ["prost"] }
